--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>好きな本について語る</title>
+    <title>じぃじばぁば まっちんぐ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
